--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "migrate:down": "npx sequelize-cli db:migrate:undo"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.3.6",
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/jwt": "^6.1.2",
