Added new support for image upload

--- a/package.json
+++ b/package.json
@@ -28,16 +28,23 @@
     "@nestjs/jwt": "^6.1.2",
     "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/platform-fastify": "^6.11.11",
+    "@nestjs/serve-static": "^2.0.0",
     "@nestjs/swagger": "^4.3.1",
     "@sendgrid/mail": "^6.5.3",
     "bcrypt": "^4.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
+    "fastify": "^2.12.1",
+    "fastify-static": "^2.6.0",
+    "fastify-swagger": "^2.5.0",
+    "handlebars": "^4.7.3",
     "moment": "^2.24.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.18.2",
+    "point-of-view": "^3.7.2",
     "rand-token": "^0.4.0",
     "reflect-metadata": "^0.1.13",
     "request-context": "^2.0.0",
